[gd_scene load_steps=5 format=3 uid="uid://djirvsnmdw1m3"]

[ext_resource type="Texture2D" uid="uid://cbp3io8wc8asb" path="res://assets/textures/input/guide_bg.png" id="1_iamp4"]
[ext_resource type="Script" path="res://scripts/input_label.gd" id="2_1xlm6"]
[ext_resource type="FontVariation" uid="uid://gfgnvtmg0njm" path="res://assets/fonts/hud.tres" id="2_slqfo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y86ej"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("1_iamp4")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0

[node name="InputLabel" type="PanelContainer"]
self_modulate = Color(0.352941, 0.772549, 0.309804, 1)
custom_minimum_size = Vector2(272, 0)
offset_right = 272.0
offset_bottom = 126.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_y86ej")
script = ExtResource("2_1xlm6")

[node name="ControlVbox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="ControlLabel" type="Label" parent="ControlVbox"]
layout_mode = 2
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2_slqfo")
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputIconHbox" type="HBoxContainer" parent="ControlVbox"]
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 2
theme_override_constants/separation = 32
alignment = 1

[node name="LeftInputBox" type="HBoxContainer" parent="ControlVbox/InputIconHbox"]
custom_minimum_size = Vector2(0, 51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 9
mouse_filter = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Tex1" type="TextureRect" parent="ControlVbox/InputIconHbox/LeftInputBox"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="Tex2" type="TextureRect" parent="ControlVbox/InputIconHbox/LeftInputBox"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="RightInputBox" type="HBoxContainer" parent="ControlVbox/InputIconHbox"]
custom_minimum_size = Vector2(0, 51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 9
mouse_filter = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Tex1" type="TextureRect" parent="ControlVbox/InputIconHbox/RightInputBox"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="Tex2" type="TextureRect" parent="ControlVbox/InputIconHbox/RightInputBox"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5
